# risk-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.github/: copilot-instructions.md
config/: app.example.json  data-sources.example.json  mcp-servers.example.json  models.example.json
docker/: docker-compose.yml
plans/: 2026-04-21-docs-code-alignment-improvement-plan.md  2026-07-18-clean-tests-design.md  2026-07-18-clean-tests.md  2026-07-18-clean-typecheck-design.md  2026-07-18-clean-typecheck.md  2026-07-18-desktop-release-artifacts-design.md  2026-07-18-desktop-release-artifacts.md  2026-07-18-node24-actions-design.md  2026-07-18-node24-actions.md  2026-07-18-node24-runtime-design.md  2026-07-18-node24-runtime.md  2026-07-18-portable-package-manager-test-design.md  2026-07-18-portable-package-manager-test.md  2026-07-19-fastify-runtime-security-design.md  2026-07-19-fastify-runtime-security.md  2026-07-19-http-client-security-design.md  2026-07-19-http-client-security.md  2026-07-19-pnpm-build-runner-design.md  2026-07-19-pnpm-build-runner.md  2026-07-19-runtime-transport-security-design.md  2026-07-19-runtime-transport-security.md  2026-07-20-dompurify-sanitizer-security-design.md  2026-07-20-dompurify-sanitizer-security.md  2026-07-20-js-yaml-updater-security-design.md  (+1 more)
services/sidecar-py/: README.md  pyproject.toml
services/sidecar-py/app/: main.py
services/sidecar-py/app/routers/: curate.py  embed.py
(+12 files in other folders)
