[project]
name = "risk-agent-sidecar"
version = "0.1.0"
description = "Risk Agent Python sidecar — embeddings & memory curator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    # Embeddings — sentence-transformers is the easy path; can swap to FlagEmbedding if needed.
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
